--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -1,12 +1,15 @@
 
 % ==========================================================
 
-\chapter{Генерация и транспорт убегающих электронов в плазме токамаков, а так же использование сцинтиляционных детекторов для их диагностики}
+\chapter{Генерация и эволюция убегающих электронов в плазме токамаков и использование сцинтиляционных детекторов для их диагностики}
 \label{ch:ch1}
+
+В настоящей главе описаны различные механизмы генерации убегающих электронов в плазме токамака; затем будут рассказано о том, какие факторы влияют на движение убегающих электронов, приводя к уменьшению набираемой ими энергии. Затем будут рассмотрены различные механизмы диагностики убегающих электронов. В конце будет подробно рассмотрено устройство сцинтилляционных детекторов, с помощью которых возможно регистрировать тормозное излучение убегающих электронов. 
 
 % ==========================================================
 
 \section{Механизмы генерации убегающих электронов}
+\label{sec:electronsGeneration}
 
 В плазме токамаков имеют место несколько механизмов генерации убегающих электронов. Это:
 
@@ -295,11 +298,146 @@
 
 % ==========================================================
 
-\section{Использование сцинтиляционных детекторов для регистрации тормозного излучения от убегающих электронов}
+\section{Использование сцинтилляционных детекторов для регистрации тормозного излучения от убегающих электронов}
 
 В настоящей работе в основном будет рассматриваться диагностика убегающих электронов по тормозному излучению с помощью сцинтиляционных детекторов. Ниже будет более подробно освещено устройство и особенности таких детекторов.
 
-\subsection{ Сцинтилляционные кристаллы }
+% ----------------------------------------------------------
 
+\subsection{ Взаимодействие гамма излучения с веществом}
+
+Когда гамма-квант проходит через детектор, он может взаимодействовать с материалом детектора в основном посредством одного из следующих процессов \cite{Grozdanov2021,Knoll2010}: 
+\begin{itemize}
+  \item фотоэлектрический эффект;
+  \item комптоновское рассеяние;
+  \item образование электрон-позитронных пар.  
+\end{itemize}
+Все эти процессы приводят к частичному или полному переходу энергии гамма-квантов в энергию электронов. В ходе взаимодействия с веществом квант либо полностью исчезает, либо рассеивается под значительным углом.~\cite{Knoll2010}
+
+В процессе фотоэлектрического поглощения квант взаимодействует с атомом поглотителя, при котором этот квант полностью исчезает. Вместо него энергичный фотоэлектрон выбрасывается атомом из одной из его связанных оболочек. Взаимодействие происходит с атомом в целом и не может происходить со свободными электронами. Для гамма-лучей достаточной энергии наиболее вероятным источником фотоэлектрона является наиболее прочно связанная или К-оболочка атома. Фотоэлектрон появляется с энергией, определяемой выражением
+\begin{equation*}
+  E_e = h \nu - E_b
+\end{equation*}
+где $E_b$ --- энергия связи фотоэлектрона в его исходной оболочке. При энергиях гамма-излучения более нескольких сот кэВ фотоэлектрон уносит большую часть первоначальной энергии фотона. 
+
+Помимо фотоэлектрона, взаимодействие создает также ионизированный атом-поглотитель с вакансией в одной из его связанных оболочек. Эта вакансия быстро заполняется за счет захвата свободного электрона из среды и/или перераспределения электронов с других оболочек атома. Следовательно, также могут генерироваться один или несколько характеристических рентгеновских фотонов. Хотя в большинстве случаев эти рентгеновские лучи повторно поглощаются близко к исходному участку сцинтиллятора за счет фотоэлектрического поглощения с участием менее прочно связанных оболочек, их миграция и возможное ускользание от детекторов излучения могут влиять на функцию отклика детектора. В некоторых случаях испускание оже-электрона может происходить вместо характеристического рентгеновского излучения при переносе энергии возбуждения атома.~\cite{Knoll2010}
+
+Процесс взаимодействия комптоновского рассеяния происходит между падающим квантом гамма-излучения и электроном в поглощающем материале. Чаще всего это преобладающий механизм взаимодействия для энергий гамма-излучения, типичных для радиоизотопных источников. При комптоновском рассеянии входящий квант гамма-излучения отклоняется на угол $\theta$ по отношению к его первоначальному направлению. Квант передает часть своей энергии электрону (предполагается, что изначально он находится в состоянии покоя), который называется электроном отдачи. Поскольку возможны все углы рассеяния, энергия, передаваемая электрону, может варьироваться от нуля до значительной доли энергии гамма-излучения. Выражение, связывающее передачу энергии и угол рассеяния для любого заданного взаимодействия, можно просто получить, написав одновременные уравнения сохранения энергии и импульса. Используя символы, определенные на схеме из рисунка~\ref{fig:electronComptonScattering}, можно показать, что
+\begin{equation*}
+  h \nu' = \frac{ h \nu }{ 1 + \frac{h \nu }{ m_e c^2  } ( 1 - \cos(\theta) ) }
+\end{equation*}
+
+\begin{figure}[ht]
+  \centerfloat{ \includegraphics[width=0.60\linewidth]{electronComptonScattering} }
+  \caption{ Схема комптоновского рассеяния.~\cite{Knoll2010}.}
+  \label{fig:electronComptonScattering}
+\end{figure}
+
+При малых углах рассеяния $\theta$ при рассеянии электрону передается очень мало энергии. Часть первоначальной энергии всегда сохраняется в налетающем кванте, даже при предельном значении $\theta = \phi$. Вероятность комптоновского рассеяния на атоме поглотителя зависит от числа электронов, доступных в качестве рассеивающих мишеней, и, следовательно, линейно возрастает с его зарядом $Z$.~\cite{Knoll2010}
+
+Если энергия кванта излучения превышает удвоенную энергию массы покоя электрона (1,02~МэВ), то становится возможным процесс образования электрон-позитронных пар. При энергиях гамма-излучения, превышающих этот порог всего на несколько сотен кэВ, вероятность образования пар невелика. Однако этот механизм взаимодействия становится преобладающим при увеличении энергии в области многих МэВ. При взаимодействии (которое должно происходить в кулоновском поле ядра) гамма-квант исчезает и заменяется электронно-позитронной парой. Вся избыточная энергия, переносимая фотоном выше 1,02~МэВ, необходимой для создания пары, переходит в кинетическую энергию, разделяемую позитроном и электроном. Поскольку позитрон впоследствии аннигилирует после замедления в поглощающей среде, два аннигиляционных фотона обычно образуются как вторичные продукты взаимодействия. Последующая судьба этого аннигиляционного излучения оказывает важное влияние на реакцию детекторов гамма-излучения.~\cite{Knoll2010}
+
+Не существует простого выражения для вероятности образования пары на ядро, но ее величина изменяется примерно пропорционально квадрату атомного номера вещества поглотителя. Важность образования пар резко возрастает с ростом энергии.~\cite{Knoll2010}
+
+Относительная важность трех процессов, описанных выше, для различных поглотителей и энергий гамма-излучения проиллюстрирована на рисунке~\ref{fig:gammaProcessesImpotance}. Линия слева представляет энергию, при которой фотоэлектрическое поглощение и комптоновское рассеяние равновероятны в зависимости от атомного номера поглотителя. Линия справа представляет энергию, при которой комптоновское рассеяние и рождение пар равновероятны. Таким образом, на графике определяются три области, в которых преобладают фотоэлектрическое поглощение, комптоновское рассеяние и образование пар.~\cite{Knoll2010}
+
+\begin{figure}[ht]
+  \centerfloat{ \includegraphics[width=0.60\linewidth]{gammaProcessesImpotance} }
+  \caption{ Относительная важность трех основных типов взаимодействия гамма-излучения с веществом. Линии показывают значения $Z$ и $h \nu$, при которых вклад двух соседних эффектов эквивалентен.~\cite{Evans1955}.}
+  \label{fig:gammaProcessesImpotance}
+\end{figure}
+
+Помимо комптоновского рассеяния может иметь место другой тип рассеяния, при котором квант гамма-излучения когерентно взаимодействует со всеми электронами атома-поглотителя. Этот процесс когерентного рассеяния или рэлеевского рассеяния не возбуждает и не ионизирует атом, а квант гамма-излучения сохраняет свою первоначальную энергию после рассеяния. Поскольку энергия практически не передается, этим процессом обычно пренебрегают в основных обсуждениях взаимодействий гамма-излучения.~\cite{Knoll2010}
+
+% ----------------------------------------------------------
+
+\subsection{ Сцинтилляторы }
+
+Регистрация ионизирующего излучения с помощью света, выделяемого при сцинтилляции некоторыми материалами, является одним из старейших методов регистрации. Процесс сцинтилляции остается одним из наиболее полезных методов обнаружения и спектроскопии широкого спектра излучений. Идеальный сцинтилляционный материал должен обладать следующими свойствами~\cite{Knoll2010}:
+\begin{itemize}
+  \item Он должен преобразовывать кинетическую энергию заряженных частиц в регистрируемый свет с высокой эффективностью сцинтилляции;
+  \item Это преобразование должно быть линейным --- светоотдача должна быть пропорциональна выделенной энергии в как можно более широком диапазоне;
+  \item Среда должна быть прозрачной для длины волны собственного излучения для хорошего сбора света;
+  \item Время затухания индуцированной люминесценции должно быть коротким, чтобы можно было генерировать быстрые импульсы сигнала;
+  \item Материал должен быть хорошего оптического качества и производиться в достаточно больших размерах, чтобы представлять интерес в качестве практического детектора;
+  \item Его показатель преломления должен быть близок к показателю преломления стекла ($\approx$~1,5), чтобы обеспечить эффективную передачу сцинтилляционного света на фотоумножитель или другой датчик света.
+\end{itemize}
+
+Ни один материал одновременно не отвечает всем этим критериям, и выбор конкретного сцинтиллятора всегда является компромиссом между этими и другими факторами. Наиболее широко применяемые сцинтилляторы включают неорганические кристаллы галогенидов щелочных металлов, из которых предпочтительным является йодид натрия, а также жидкости и пластмассы на органической основе. Неорганические вещества, как правило, имеют лучший световой поток и линейность, но, за некоторыми исключениями, имеют относительно медленное время отклика. Органические сцинтилляторы обычно быстрее, но дают меньше света. Предполагаемое применение также оказывает большое влияние на выбор сцинтиллятора. Высокое значение $Z$ компонентов и высокая плотность неорганических кристаллов благоприятствуют их выбору для гамма-спектроскопии, тогда как органические вещества часто предпочтительнее для бета-спектроскопии и обнаружения быстрых нейтронов (из-за содержания в них водорода).~\cite{Knoll2010}
+
+Процесс флуоресценции --- это мгновенное испускание видимого излучения веществом после его возбуждения каким-либо образом. Принято выделять несколько других процессов, которые также могут приводить к излучению видимого света. Фосфоресценция соответствует излучению света с большей длиной волны, чем флуоресценция, и с характерным временем, которое обычно намного меньше. Замедленная флуоресценция приводит к тому же спектру излучения, что и быстрая флуоресценция, но опять же характеризуется гораздо более длительным временем излучения после возбуждения. Чтобы быть хорошим сцинтиллятором с точки зрения использования в детекторах, материал должен преобразовывать как можно большую долю энергии падающего излучения в мгновенную флуоресценцию, сводя при этом к минимуму обычно нежелательные вклады в фосфоресценцию и замедленную флуоресценцию. При работе сцинтилляторов в импульсном режиме свет, который может вносить вклад в выходной импульс, обычно ограничивается мгновенной флуоресценцией, потому что время формирования импульса измерительной схемы установлено намного меньшим, чем обычное время затухания фосфоресценции и задержанной флуоресценции. Затем этот долгоживущий свет распределяется более или менее случайным образом во времени между сигнальными импульсами и достигает датчика света в виде отдельных фотонов, которые часто невозможно отличить от случайного шума. Напротив, сцинтилляторы, которые работают в токовом режиме при постоянном освещении, будут генерировать установившийся ток сигнала, который пропорционален общему световому выходу, и все компоненты затухания будут вносить вклад, пропорциональный их абсолютной интенсивности. По этой причине световыход, измеренный от сцинтиллятора, работающего в импульсном режиме, может оказаться ниже, чем полученный от стационарного тока, зарегистрированного от того же сцинтиллятора. Сцинтилляционные детекторы токового режима режима, работающие в условиях быстрого изменения интенсивности излучения, будут страдать от эффектов памяти или ``послесвечения'', если долгоживущие компоненты спада значительны.~\cite{Knoll2010}
+
+В таблице~\ref{tab:scintiilatorProperties} представленны характеристики некоторых часто используемых сцинтилляторов, используемых при диагностике плазмы. Атомная структура сцинтилляторов LaBr3(Ce) и NaI(Tl) показана на рисунке~\ref{fig:scintillatorAtomicStructure}.
+
+\begin{table} [htbp]
+    \centering
+    \begin{threeparttable}
+      \caption{ Параметры некоторых неорганических сцинтилляторов.~\cite{Grozdanov2021} }
+        \label{tab:scintiilatorProperties}
+        \begin{tabular}{| p{7cm} | p{2cm} | p{2cm} | p{2cm} | }
+            \hline
+            Хараектристика   & BGO & NaI(Tl) & LaBr3(Ce) \\
+            \hline
+            Световыход, фотон/кэВ & 9 & 38 & 63 \\
+            Время спада импульса, нс & 300 & 250 & 16 \\
+            Длина волны излучения (максимум), нм & 480 & 415 & 380 \\
+            Показатель преломления на этой дине волны & 2.15 & 1.85 & $\approx$1.9 \\
+            Плотность, г/см${}^3$ & 7.13 & 3.68 & 5.08 \\
+            Длина, на которой полгощается 50\% илучения 662~кэВ, см & 1.0 & 2.5 & 1.8 \\
+            \hline
+        \end{tabular}
+    \end{threeparttable}
+\end{table}
+
+\begin{figure}[ht]
+  \centerfloat{ \includegraphics[width=0.80\linewidth]{scintillatorAtomicStructure} }
+  \caption{ Атомная структура элементарных ячеек кристаллов NaI~(a) и LaBr3(Ce)~(b).~\cite{Schleife2016}.}
+  \label{fig:scintillatorAtomicStructure}
+\end{figure}
+
+
+%В детекторе сцинтилляционный кристалл обычно оптически соединяется с ФЭУ, сигнал с которого дальше передаётся на АЦП. При соединении могут использоваться различные приёмы, позволяющие увелчиить количество собираемого света, например использоваться фоконы. 
+
+% ----------------------------------------------------------
+
+\subsection{Конструкция детектора}
+
+Широкое использование сцинтилляционного счета в детектировании излучений и спектроскопии было бы невозможно без наличия устройств для преобразования крайне слабого светового выхода сцинтилляционного импульса в соответствующий электрический сигнал. Фотоумножитель (ФЭУ) замечательно справляется с этой задачей, преобразовывая световые сигналы, которые обычно состоят не более чем из нескольких сотен фотонов, в полезный импульс тока, не добавляя к сигналу большого количества случайного шума. Фотодиоды так же могут использоваться для этой цели, но происходит это обычно гораздо реже.~\cite{Knoll2010}
+
+Схема типичного сцинтилляционного детектора представлена на рисунке~\ref{fig:scintillatorSchemeExample}.
+
+\begin{figure}[ht]
+  \centerfloat{ \includegraphics[width=0.80\linewidth]{scintillatorSchemeExample} }
+  \caption{ Схема сцинтилляционного детектора из работы~\cite{Grozdanov2021}. Цифрами на рисунке обозначены: 1 --- кристалл LaBr3(Ce), 2 --- алюминиевый корпус, 3 --- магнитный экранирован, 4 --- ФЭУ Hamamatsu R10233. Габаритные размеры указаны в миллиметрах.}
+  \label{fig:scintillatorSchemeExample}
+\end{figure}
+
+
+% ----------------------------------------------------------
+
+\subsection{Функция отклика детектора}
+
+Процесс взаимодействия гамма-кванта с веществом является случайным процессом, и невозможно предсказать, какая часть его начальной энергии будет поглощена детектором для данного единичного события. Однако можно определить вероятность обнаружения определенной доли начальной энергии гамма-кванта путем измерения распределения энергии регистрируемых импульсов для большого числа событий от моноэнергетического источника. Это распределение называется функцией отклика.~\cite{Grozdanov2021} 
+
+Обычно в гамма-спектроскопии высокого разрешения при анализе сложных спектров интерес представляют только полные пики поглощения всей энергии, так как их положения пропорциональны начальным энергиям соответствующих гамма-квантов. Иногда одиночные и двойные пики убегания также считаются полезными частями спектра. Остальная часть спектра в основном образует континуум, который служит нежелательным фоном для н пиков от низкоэнергетичных квантов. Основная цель анализа такого спектра состоит в том, чтобы как можно точнее определить положение пика полного поглощения энергии и число событий в нём, при этом непрерывный фон обычно аппроксимируется гладкой функцией и вычитается. С другой стороны, знание функции отклика детектора позволяет использовать не только события из пиков полного поглощения или выхода энергии, но и из непрерывной части спектра, либо суммируя эти события с событиями полного энергетического пика. пиков поглощения, используя процедуру деконволюции или принимая во внимание знание формы континуума в процедуре фиттнга.~\cite{Grozdanov2021}
+
+На рисунке~\ref{fig:scintillatorResponseExample} представлены функции отклика детекторов на основе различных материалов. 
+
+\begin{figure}[ht]
+  \centerfloat{ \includegraphics[width=0.50\linewidth]{scintillatorResponseExample} }
+  \caption{ Фиттированные функции отклика детекторов BGO~(a), NaI(Tl)~(b) и LaBr3(Ce)~(c) на $\gamma$-кванты с энергией 2,6~МэВ. Обозначены компоненты функций отклика: 1 --- пик полного поглощения энергии, 2 --- пик одиночного вылета, 3 --- пик двойного вылета, 4 --- комптновоский край с одиночным вылетом, 5 — комптоновский край с двойным вылетом, 6 --- вклад внутреннего рассеяния, 7 --- вклад внешнего рассеяния, 8 --- функция полного отклика и 9 --- результаты моделирования.~\cite{Grozdanov2021}}
+  \label{fig:scintillatorResponseExample}
+\end{figure}
+
+% ==========================================================
+
+\FloatBarrier
+\section{Выводы к главе 1}
+
+В настоящей главе рассмотрены механизмы возникновения убегающих электронов: прежде всего, это ускорение электронов в электрическом поле с переходом в режим убегания, затем --- лавинный эффект, при котором кулоновские столкновения первичных убегающих электронов приводят с обычными электронами плазмы приводят к переходу последних в режим убегания, а так же ряд прочих механизмов (радиоактивный распад трития, рассеяние гамма излучения на свободных электронах). Рассмотрены механизмы, ограничивающие энергию убегающих электронов: ограничение из-за конечного времени жизни электрона, синхротронное и тормозное излучение, дрейфовое смещение орбиты, взаимодействие с возмущениями магнитного поля, плазменные неустойчивости.
+
+Затем были рассмотрены методы диагностики убегающих электронов: по тормозному и синхротронному излучению, циклотронному излучению, инфракрасному излучению. Были рассмотрены принципы работы сцинтилляционных детекторов излучения, с помощью которых возможно регистрировать жёсткое рентгеновское излучение, генерируемое убегающими электронами.
+
+% ----------------------------------------------------------
 
 \FloatBarrier
