--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1,6 +1,8 @@
 \chapter{Обработка сигналов со сцинтилляционных детекторов с разделением наложенных импульсов}
 \label{ch:ch2}
 
+При измерении сигнала с сцинтилляционных детекторов может быть записана осциллограмма сигнала, на которой видны отдельные импульсы, соответствующие событиям регистрации гамма квантов детекторов. В настоящей главе представлены алгоритмы, которые использутся при обработке осциллограмм и получения времени и апмлитуды регистрации каждого зарегистрированного события, а так же алгоритмы, которые позволяют корректировать полученные спектры с учётом событий, которые наложены и не могут быть разделены..
+
 % ==========================================================
 
 \section{Проблемы обработки сигнала сцинтилляционных детекторов}
@@ -293,6 +295,7 @@
     \label{fig:FittingProcessing}
 \end{figure}
 
+
 % ----------------------------------------------------------
 
 \subsection{Деконволюция сигнала}
@@ -442,7 +445,7 @@
 
 \section{Применение методов обработки на измеренных сигналах в экспериментах}
 
-Для демонстрации работы алгоритмов был использован сигнал, полученный в ходе измерений, проведенных на циклотроне ФТИ им. А.Ф.~Иоффе~\cite{Lemberg1987}. Во время измерений пучок альфа-частиц направлялся на бериллиевую мишень, вызывая ядерную реакцию ${}^9Be(\alpha,n\gamma){}^{12}C$ с испусканием гамма-квантов с энергией 4,44~МэВ. Для измерений использовался сцинтилляционный детектор LaBr3(Ce) диаметром 76~мм с ФЭУ Hamamatsu R10233-100. Сигнал детектора оцифровывался с помощью платы АЦП ADP201X1/ADM214x400M/2A производства ЗАО <<Инструментальные системы>> с частотой дискретизации 250~МГц и записывался на жёсткий диск компьютера. Во время измерений менялся ток ионного пучка, что позволяло получать разные уровни загрузки детектора. Циклотрон работал в импульсном режиме.
+Для демонстрации работы алгоритмов был использован сигнал, полученный в ходе измерений, проведенных на циклотроне ФТИ им. А.Ф.~Иоффе~\cite{Lemberg1987}. Во время измерений пучок альфа-частиц направлялся на бериллиевую мишень, вызывая ядерную реакцию ${}^9Be(\alpha,n\gamma){}^{12}C$ с испусканием гамма-квантов с энергией 4,44~МэВ. Для измерений использовался сцинтилляционный детектор LaBr3(Ce) диаметром 76~мм с ФЭУ Hamamatsu R10233-100. Сигнал детектора оцифровывался с помощью платы АЦП ADP201X1/ADM214x400M/2A производства ЗАО ``Инструментальные системы'' с частотой дискретизации 250~МГц и записывался на жёсткий диск компьютера. Во время измерений менялся ток ионного пучка, что позволяло получать разные уровни загрузки детектора. Циклотрон работал в импульсном режиме.
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.51\linewidth]{processingCycloSignal} }
