--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -1,6 +1,10 @@
 \chapter{Восстановление функции распределения убегающих электронов по измеренному спектру жёсткого рентгеновского излучения}
 \label{ch:ch3}
 
+После обработки осциллогарммы могут быть построены спектры жёсткого ренгеновского излучения. Эти спектры не эквивалентны спектрам гамма и рентгеновских квантов, которые были рождены источником излучения. С помощью ряда алгоритмов, описанных ниже, по измеренному спектру возможно восстановить спектр источника излучения. 
+
+Убегающие электроны генерируют жёсткое рентгеновское излучение, спектр которого зависит от их функции распределения. С помощью описанных ниже алгоритмов возможно по измеренному спектру событий восстановить функцию распределения убегающих электронов.
+
 % ==========================================================
 
 \section{Восстановление исходного спектра гамма излучения по измеренному спектру}
