--- a/Dissertation/part5.tex
+++ b/Dissertation/part5.tex
@@ -1,4 +1,107 @@
 \chapter{Диагоностика убегающих электронов на токамаке JET}
 \label{ch:ch5}
 
+% ==========================================================
+
+\section{Спектрометы жёсткого рентгеновского излучения на токамаке JET}
+
+В настоящее JET имеет самую совершенную систему гамма-спектрометрии среди действующих токамаков~\cite{Iliasova2022}. В экспериментах используются два спектрометра LaBr3(Ce) $\varnothing 76,2 \times 152,4$~мм~\cite{Nocente2010} с вертикальным и тангенциальным линиями обзора (рисунок~\ref{fig:jetHxrDetectorsScheme}, слева). Детектор с вертикальной линией обзора LaBr3(Ce) может быть заменён на один из двух других спектрометров. Первый --- HPGe-спектрометр~\cite{Tardocchi2011}, обеспечивающий высокоэффективную регистрацию гамма-излучения с исключительно высоким энергетическим разрешением (2,4~кэВ на линии 1,333~МэВ), который, однако, имеет гораздо меньшую по сравнению с LaBr3(Ce) максимальную скорость счёта. Второй --- спектрометр NaI(Tl) размером $\varnothing 5 \times 5$~дюймов, разрешение которого составляет 3\% на линии 4~МэВ~\cite{Tardocchi2008}. Спектрометр BGO с квазитангенциальной линией обзора, ранее работавший на токамаке, был заменен детектором LaBr3(Ce) ($\varnothing 76,2 \times 152,4$~мм)~\cite{Nocente2021}. В тангенциальном спектрометре полиэтиленовый аттенюатор был заменен на аттенюатор из гидрида лития (LiH)~\cite{Curuia2017}. На коллиматор вертикального спектрометра LaBr3(Ce) в дополнение к ранее существовавшему LiH-фильтру $\varnothing 30 \times 300$~мм, обогащенному изотопом ${}^6$Li, был установлен аттенюатор LiH с естественным соотношением изотопов лития длиной 400~мм~\cite{Murari2008}.
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.92\linewidth]{jetHxrDetectorsScheme} }
+  \caption{ Расположение гамма-спектрометров на токамаке JET.~\cite{Iliasova2022} }
+  \label{fig:jetHxrDetectorsScheme}
+\end{figure}
+
+Сигнал со спектрометров LaBr3(Ce) записывается в сегментной моде~\cite{Pereira2008,Pereira2011} когда сохраняются только части осциллограммы, превышающие некоторый заданный порог, и их окрестности. Для оцифровки используется 14-битное АЦП с частотой 400~МГц. Сохранённые осциллограммы записываются в систему сбора и обработки данных CODAS, откуда могут быть впоследствии извлечены и обработаны, например, с помощью алгоритмов, описанных в главах~\ref{ch:ch2} и \ref{ch:ch3}. 
+
+В дополнение к этим спектрометрам для получения двумерных измерений профилей гамма-излучения может использоваться гамма-камера, состоящая из 19~компактных детекторов с 10~горизонтальными и 9~вертикальными линиями обзора (рисунок~\ref{fig:jetHxrDetectorsScheme}, справа). Компактные детекторы изготовлены из кристаллов LaBr3(Ce) $\varnothing 25 \times 17$~мм~\cite{Rigamonti2018}. Выходной сигнал от каждого детектора оцифровывается 13-битном АЦП со скоростью 200 отсчётов в секунду~\cite{Fernandes2018}.
+
+% ==========================================================
+
+\section{Восстановление функции распределения убегающих электронов на токамаке JET}
+
+Для восстановления функций распределения были предварительно рассчитаны функции отклика детектора и функции генерации убегающими электронами жёсткого рентгеновского излучения. Расчёты были выполнены А.~Е.~Шевелевым с помощью кода MCNP, примеры полученных функций показаны на рисунке~\ref{fig:jetGenerationFunctions}. 
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.85\linewidth]{jetGenerationFunctions} }
+  \caption{ Спектры жёсткого рентгеновского излучения, генерируемые пучком моноэнергетических электронов с различной энергией, рассчитанные для условий токамака JET.~\cite{Shevelev2013} }
+  \label{fig:jetGenerationFunctions}
+\end{figure}
+
+
+Разработанный код DeGaSum был использован для восстановления распределений убегающих электронов по измеренным спектрам жёсткого рентгеновского излучения на токамаке JET. Рисунок~\ref{fig:jetRunawayEdf82715} иллюстрируют применение кода DeGaSum для диагностики убегающих электронов на токамаке JET. В качестве примера можно рассмотреть разряд №~82715, в котором при нарастании тока возник пучок убегающих электронов. Спектры жёсткого рентгеновского излучения были измерены с помощью   детектором NaI(Tl) с вертикальной линией обзора, после чего были обработаны с помощью программы DeGaSum. Спектры излучения, генерируемые быстрыми электронами при взаимодействии с ионами плазмы и зарегистрированные спектрометром, показаны на верхних рисунках \ref{fig:jetRunawayEdf82715} черными точками. Восстановленные функции распределения убегающих электронов представлены красными линиями на нижних рисунках. Результаты свёрток полученных функций распределения с функциями отклика детектора показаны на рисунках синими линиями. В этом разряде генерация пучка убегающих электронов происходила при нарастании тока при малой плотности и прекращалась при увеличении плотности.~\cite{Shevelev2013} 
+
+%\begin{figure}[ht!]
+%  \centerfloat{ \includegraphics[width=0.55\linewidth]{jetRunawayEdf82715_t1} }
+%  \caption{ (a) --- спектр жёсткого рентгеновского излучения, зарегистрированный в период 41,1--42,4 с помощью детектора NaI(Tl) в импульсе на токамаке JET №~82715 (черные точки), и спектр, полученный после свёртки восстановленной функции распределения электронов с функцией отклика детектора (синяя линия); (b) --- восстановленная функция распределения энергии убегающих электронов.~\cite{Shevelev2013} }
+%  \label{fig:jetRunawayEdf82715_t1}
+%\end{figure}
+%
+%\begin{figure}[ht!]
+%  \centerfloat{ \includegraphics[width=0.55\linewidth]{jetRunawayEdf82715_t2} }
+%  \caption{ (a) --- спектр жёсткого рентгеновского излучения, зарегистрированный в период 41,1--42,4 с помощью детектора NaI(Tl) в импульсе на токамаке JET №~82715 (черные точки), и спектр, полученный после свёртки восстановленной функции распределения электронов с функцией отклика детектора (синяя линия); (b) --- восстановленная функция распределения энергии убегающих электронов.~\cite{Shevelev2013} }
+%  \label{fig:jetRunawayEdf82715_t2}
+%\end{figure}
+%
+%\begin{figure}[ht!]
+%  \centerfloat{ \includegraphics[width=0.55\linewidth]{jetRunawayEdf82715_t3} }
+%  \caption{ (a) --- спектр жёсткого рентгеновского излучения, зарегистрированный в период 41,1--42,4 с помощью детектора NaI(Tl) в импульсе на токамаке JET №~82715 (черные точки), и спектр, полученный после свёртки восстановленной функции распределения электронов с функцией отклика детектора (синяя линия); (b) --- восстановленная функция распределения энергии убегающих электронов.~\cite{Shevelev2013} }
+%  \label{fig:jetRunawayEdf82715_t3}
+%\end{figure}
+
+\begin{figure}[ht]
+    \begin{minipage}[b][][b]{0.42\linewidth}\centering
+        \includegraphics[width=0.98\linewidth]{jetRunawayEdf82715_t1} \\ а)
+    \end{minipage}
+    \hfill
+    \begin{minipage}[b][][b]{0.42\linewidth}\centering
+        \includegraphics[width=0.98\linewidth]{jetRunawayEdf82715_t2} \\ б)
+    \end{minipage}
+    \hfill
+    \begin{minipage}[b][][b]{0.42\linewidth}\centering
+        \includegraphics[width=0.98\linewidth]{jetRunawayEdf82715_t3} \\ в)
+    \end{minipage}
+    \caption{ Разряд на токамаке JET №~82715, результаты обработки данных с детектора NaI(Tl). Верхние изображения, чёрные точки --- зарегистрированный спектр жёсткого рентгеновского излучения, нижние изображения, красная кривая --- восстановленная функция распределения убегающих электронов, верхние изображения, синяя кривая --- спектр излучения, полученный в результате свёртки восстановленной функции распределения. (а) --- временное окно 41,1--42,4~с, (б) --- временное окно 42.4--44.6~с, (в) --- временное окно 44.6--48.6~с.~\cite{Shevelev2013}. }
+    \label{fig:jetRunawayEdf82715}
+\end{figure}
+
+
+
+Мы не ставили целью теоретическое объяснение полученных результатов наших измерений. Разработанная методика позволяет анализировать процессы генерации и эволюции убегающего пучка и проводить верификацию теоретических моделей. Полученная нами в рассматриваемом разряде форма распределения может быть связана с тем, что детектор имеет коллимированную вертикальную линию обзора и может регистрировать излучение только из центральной части плазменного шнура.~\cite{Shevelev2013} Убегающий пучок может иметь пространственное распределение, зависящее от энергии. Это может быть возможно из-за эффекта смещения орбиты релятивистского убегающего пучка~\cite{Knoepfel1979}. Также форма распределения электронов может отражать эволюцию процесса убегающей генерации, включая режимы первичной и вторичной генерации~\cite{Helander2002}.
+
+Ток убегания, создаваемый электронами с энергией более 2~МэВ, был определён путем интегрирования потока электронов, пересекающего вертикальное поле зрения спектрометра. Зависимость тока убегающих электронов от времени показана на рисунке~\ref{fig:jetPulseParams82715}~(d). Значения тока плазмы и усредненной по линии плотности электронов представлены на рисунках~\ref{fig:jetPulseParams82715}~(a) и (b) соответственно. Кривая скорости счета гамма-спектрометра NaI(Tl) показана на рисунке~\ref{fig:jetPulseParams82715}~(c). На рисунке~\ref{fig:jetPulseTomography82715} представлена томографическая реконструкция интенсивности излучения в камере токамака, полученная с помощью гамма-камеры.
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.75\linewidth]{jetPulseParams82715} }
+  \caption{ (a) --- ток по плазме в разряде №~82715 на токамаке JET ($I_p = 1,7$~МА, $B_t = 2$~Тл, $T_e = 1,8$~кэВ, $P_{NBI} = 2,3$~МВт); (b) ---  плотность электронов; (c) интенсивность жёсткого рентгеновского излучнения; (d) --- восстановленный ток убегающих электронов в видимом для вертикального спектрометра объеме плазмы, учтены только электроны с энергией больше чем 2~МэВ.~\cite{Shevelev2013} }
+  \label{fig:jetPulseParams82715}
+\end{figure}
+
+\begin{figure}[ht]
+    \begin{minipage}[b][][b]{0.48\linewidth}\centering
+        \includegraphics[width=0.95\linewidth]{jetPulseTomography82715_t1} \\ а)
+    \end{minipage}
+    \hfill
+    \begin{minipage}[b][][b]{0.48\linewidth}\centering
+        \includegraphics[width=0.95\linewidth]{jetPulseTomography82715_t2} \\ б)
+    \end{minipage}
+    \caption{ Томографическая реконструкция пространственного распределения жёсткого рентгеновского излучения в камере токамака JET в ходе разряда №~82715: (а) --- во временном интервале 41.1--41.8~c, (б) --- во временном интервале 42.4--43.4~с.~\cite{Shevelev2013a}. }
+    \label{fig:jetPulseTomography82715}
+\end{figure}
+
+% ==========================================================
+
+\FloatBarrier
+\section{Убегающие электроны в экспериментах с ILW на токамаке JET}
+
+Функция распределения убегающих электронов по энергии является важной характеристикой, описывающей процесс их генерации.~\cite{Plyusnin2015} Эволюция функции распределения может характеризовать различные стадии этого процесса, такие как ускорение электронов и их рассеяние на фоновой плазме и нейтральных частицах, взаимодействие с первой стенкой и т.д. Иногда убегающие электроны регистрировались и на переходных стадиях пробоя разряда и нарастания тока плазмы в токамаке JET с ИТЭР-подобной стенкой (JET-ILW).~\cite{Plyusnin2015} Генерация убегающих электронов во время стадии плато в ходе разрядов на токамаке JET представляют собой предмет повышенного интереса, в первую очередь из-за редкой возможности изучения возникновения, роста и причин гибели релятивистских электронов.~\cite{Granetz2014} 
+
+Ниже в этом разделе представлены результаты исследования параметров убегающих элекронов, генерируемых и регистрируемых во время квазистационарной стадии разряда JET-ILW после значительного снижения плотности плазмы. Эволюция измеряемых параметров плазмы (плотность, температура электронов, напряжение контура, ток плазмы) была численно обработана в рамках традиционной теории генерации убегающих электронов.~\cite{Plyusnin2015}
+
+Во время плоской стадии обычного разряда JET-ILW №~86078 внезапная потеря контроля над впуском рабочего газа привела к снижению плотности плазмы до чрезвычайно низкого значения: $ < n_e > \le 2.0\cdot10^{18}$~м${}^{-3}$, начиная с отметки времени примерно $t = 18.4$~с на рисунке~\ref{fig:}. (от прибл. t = 18,4 с на рис. 1). Этот режим с низкой плотностью сохраняется около 8 секунд. Нейтронная диагностика зафиксировала практически полное исчезновение выхода термоядерных нейтронов из дейтериевой плазмы после этого уменьшения плотности. Плазменный ток во время этой стадии низкой плотности поддерживался почти постоянным (Ipl ≅ 1,8 МА) до прекращения разряда (рис. 1). Измеренное напряжение контура (Vloop) в начале снижения плотности составило Vloop ≅ 0,65 В, что соответствует <Te> ≅ 1,5 кэВ, рассчитанному по классическому сопротивлению с неоклассической поправкой на долю захваченных частиц. Полученное значение <Te> очень близко к данным Te, предоставляемым другими диагностиками JET. В фазе низкой плотности средняя (дрейфовая) скорость течения увеличивается до u0 = (Ipl/πapl2)/(ene) ≤ 3,0E6 м/с, где apl — радиус плазмы (из EFIT), а <n e> — измеренная плотность плазмы. . Большая дрейфовая скорость (u0 ≅ 0,1vTe) неизбежно приведет к асимметрии функции распределения электронов (fe(ve)~ne*exp(-(ve-u0)2/vte2)). Простой расчет показывает, что возникшая асимметрия вызывает значительное увеличение числа электронов (до ~10%), движущихся в направлении ускорения. Это приводит к увеличению числа электронов со скоростями выше ! !!! !"! (!!!!"") критическая: ve > vDr =, где vDr - критическая скорость генерации первичных (драйсеровских) убегающих электронов (УЭ).
+
+
+% ==========================================================
+
 \clearpage
