--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -33,6 +33,21 @@
   addendum = {(Scopus, WoS)},
 }
 
+@article{Shevelev2021,
+  doi = {10.1088/1741-4326/ac2638},
+  url = {https://doi.org/10.1088/1741-4326/ac2638},
+  year = 2021,
+  month = {9},
+  publisher = {{IOP} Publishing},
+  volume = {61},
+  number = {11},
+  pages = {116024},
+  author = {A. Shevelev and E. Khilkevitch and M. Iliasova and M. Nocente and G. Pautasso and G. Papp and A.D. Molin and S.P. Pandya and V. Plyusnin and L. Giacomelli and G. Gorini and E. Panontin and D. Rigamonti and M. Tardocchi and G. Tardini and A. Patel and A. Bogdanov and I. Chugunov and D. Doinikov and V. Naidenov and I. Polunovsky and  the ASDEX Upgrade Team and  the EUROfusion MST1 Team},
+  title = {Study of runaway electron dynamics at the {ASDEX} Upgrade tokamak during impurity injection using fast hard x-ray spectrometry},
+  journal = {Nuclear Fusion},
+  addendum = {(Scopus, WoS)},
+}
+
 @ARTICLE{Nocente2019,
   doi = {10.1088/1361-6587/ab4f32},
   url = {https://doi.org/10.1088/1361-6587/ab4f32},
@@ -324,6 +339,14 @@
   keywords = {Neutron spectrometry, Liquid scintillator, Response functions, Efficiency of neutron registration, Monoenergetic neutrons, Neutron spectrometer calibration, Coincidence method},
 }
 
+@inproceedings{Khilkevich2019Dvp,
+  author = {Хилькевич, Е.М. and Шевелев, А.Е. and Ильясова, М.В. and Чугунов, И.Н. and Гин, Д.Б. and Дойников, Д.Н. and Найденов, В.О. and Полуновский, И.А.},
+  title = {Cтатус разработки канала регистрации гамма-спектрометра в составе анализаторов атомов перезарядки ИТЭР},
+  booktitle = {Тезисы докладов ХVIII всероссийской конференции <<Диагностика высокотемпературной плазмы>>},
+  year = {2019},
+  language = {russian},
+  authorconf = {true},
+}
 
 
 %
