--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -470,7 +470,7 @@
   volume = {57},
   number = {6},
   pages = {066025},
-  author = {J.R. Mart{\'{\i}}n-Sol{\'{\i}}s and A. Loarte and M. Lehnen},
+  author = {J.R. Martin-Solis and A. Loarte and M. Lehnen},
   title = {Formation and termination of runaway beams in {ITER} disruptions},
   journal = {Nuclear Fusion},
 }
@@ -1122,6 +1122,324 @@
   URL = {  https://doi.org/10.1063/1.4890398  },
   eprint = {  https://doi.org/10.1063/1.4890398 }
 }
+
+@article{Pereira2008,
+  title = {ATCA data acquisition system for gamma-ray spectrometry},
+  journal = {Fusion Engineering and Design},
+  volume = {83},
+  number = {2},
+  pages = {341-345},
+  year = {2008},
+  note = {Proceedings of the 6th IAEA Technical Meeting on Control, Data Acquisition, and Remote Participation for Fusion Research},
+  issn = {0920-3796},
+  doi = {https://doi.org/10.1016/j.fusengdes.2007.10.011},
+  url = {https://www.sciencedirect.com/science/article/pii/S0920379607005145},
+  author = {R.C. Pereira and J. Sousa and A.M. Fernandes and F. Patrício and B. Carvalho and A. Neto and C.A.F. Varandas and G. Gorini and M. Tardocchi and D. Gin and A. Shevelev},
+  keywords = {Data acquisition, Gamma-ray spectroscopy, PHA, Pulse processing}
+}
+
+@inproceedings{DalMolin2019,
+  author = {Dal Molin, A. and Nocente, M. and Panontin, E. and Rigamonti, D. and Tardocchi, M. and Shevelev, A. and Khilkevitch, E. and Iliasova, M. and Giacomelli, L. and Gorini, G. and Pautasso, G. and Papp, G. and Tardini, G.},
+  month = {1},
+  title = {Development of gamma-ray spectrometers optimized for runaway electron bremsstrahlung emission in fusion devices},
+  year = {2019},
+  booktitle={ Proc. of 46th European Physical Society Conference on Plasma Physics (EPS 2019) (8–12 July 2019, Milan Italy) },
+  url = { http://ocs.ciemat.es/EPS2019PAP/pdf/P1.1015.pdf }
+}
+
+@book{Sayood2012,
+  author = {Sayood, Khalid},
+  title = {Introduction to Data Compression, Fourth Edition},
+  year = {2012},
+  isbn = {0124157963},
+  publisher = {Morgan Kaufmann Publishers Inc.},
+  address = {San Francisco, CA, USA},
+  edition = {4th}
+}
+
+@rfc{RFC1951,
+  author = {Deutsch, P.},
+  title = {RFC1951: DEFLATE Compressed Data Format Specification Version 1.3},
+  year = {1996},
+  publisher = {RFC Editor},
+  address = {USA},
+}
+
+@article{Tardini2012,
+  doi = {10.1088/1748-0221/7/03/c03004},
+  url = {https://doi.org/10.1088/1748-0221/7/03/c03004},
+  year = 2012,
+  month = {3},
+  publisher = {{IOP} Publishing},
+  volume = {7},
+  number = {03},
+  pages = {C03004--C03004},
+  author = {G Tardini and A Zimbal and B Esposito and F Gagnon-Moisan and D Marocco and R Neu and H Schuhmacher and the ASDEX Upgrade Team},
+  title = {First neutron spectrometry measurements in the {ASDEX} Upgrade tokamak},
+  journal = {Journal of Instrumentation}
+}
+
+@article{Pautasso2020,
+  doi = {10.1088/1741-4326/ab9563},
+  url = {https://doi.org/10.1088/1741-4326/ab9563},
+  year = 2020,
+  month = {7},
+  publisher = {{IOP} Publishing},
+  volume = {60},
+  number = {8},
+  pages = {086011},
+  author = {G. Pautasso and M. Dibon and M. Dunne and R. Dux and E. Fable and P. Lang and O. Linder and A. Mlynek and G. Papp and M. Bernert and A. Gude and M. Lehnen and P.J. McCarthy and J. Stober and   and},
+  title = {Generation and dissipation of runaway electrons in {ASDEX} Upgrade experiments},
+  journal = {Nuclear Fusion}
+}
+
+@article{PazSoldan2017,
+  title = {Spatiotemporal Evolution of Runaway Electron Momentum Distributions in Tokamaks},
+  author = {Paz-Soldan, C. and Cooper, C. M. and Aleynikov, P. and Pace, D. C. and Eidietis, N. W. and Brennan, D. P. and Granetz, R. S. and Hollmann, E. M. and Liu, C. and Lvovskiy, A. and Moyer, R. A. and Shiraki, D.},
+  journal = {Phys. Rev. Lett.},
+  volume = {118},
+  issue = {25},
+  pages = {255002},
+  numpages = {6},
+  year = {2017},
+  month = {6},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.118.255002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.118.255002}
+}
+
+@article{Linder2020,
+  doi = {10.1088/1741-4326/ab9dcf},
+  url = {https://doi.org/10.1088/1741-4326/ab9dcf},
+  year = 2020,
+  month = {8},
+  publisher = {{IOP} Publishing},
+  volume = {60},
+  number = {9},
+  pages = {096031},
+  author = {O. Linder and E. Fable and F. Jenko and G. Papp and G. Pautasso and   and},
+  title = {Self-consistent modeling of runaway electron generation in massive gas injection scenarios in {ASDEX} Upgrade},
+  journal = {Nuclear Fusion},
+}
+
+@phdthesis{Pandya2019,
+  title={Development and performance assessment of ITER diagnostics for runaway electrons based on predictive modelling},
+  author={Pandya, Santosh},
+  year={2019},
+  school={Aix-Marseille}
+}
+
+@article{Patel2021,
+  doi = {10.48550/ARXIV.2103.00325},
+  url = {https://arxiv.org/abs/2103.00325},
+  author = {Patel, Ansh and Pandya, Santosh P.},
+  title = {Simulation of runaway electron generation in fusion grade tokamak and suppression by impurity injection},
+  publisher = {arXiv},
+  year = {2021}
+}
+
+@article{Matsuyama2017,
+  title={Analysis of Avalanche Runaway Generation after Disruptions with Low-Z and Noble Gas Species},
+  author={Akinobu Matsuyama and Masatoshi YAGI},
+  journal={Plasma and Fusion Research},
+  volume={12},
+  pages={1403032-1403032},
+  year={2017},
+  doi={10.1585/pfr.12.1403032}
+}
+
+@article{Grozdanov2021,
+  title = {Semi-empirical gamma-ray response function of BGO, NaI(Tl) and LaBr3(Ce) scintillation detectors},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {1014},
+  pages = {165741},
+  year = {2021},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/j.nima.2021.165741},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168900221007269},
+  author = {D.N. Grozdanov and N.A. Fedorov and Yu.N. Kopatch and I.N. Ruskov and V.R. Skoy and T.Yu. Tretyakova and S.B. Dabylova},
+}
+
+@book{Knoll2010,
+  title={Radiation Detection and Measurement},
+  author={Knoll, G.F.},
+  isbn={9780470131480},
+  lccn={2010019070},
+  url={https://books.google.ru/books?id=4vTJ7UDel5IC},
+  year={2010},
+  publisher={Wiley}
+}
+
+@Book{Evans1955,
+  author = { Evans, Robley D. },
+  title = { The atomic nucleus },
+  publisher = { McGraw-Hill New York },
+  pages = { 972 p. },
+  year = { 1955 },
+  type = { Book },
+  language = { English },
+  subjects = { Atoms.; Nuclear Physics.; Nuclear physics. },
+  url = { https://nla.gov.au/nla.cat-vn2169725 },
+}
+
+@article{Schleife2016,
+  Author = {Andr{\'e} Schleife and Xiao Zhang and Qi Li and Paul Erhart and Daniel {\AA}berg},
+  Doi = {10.1557/jmr.2016.395},
+  Journal = {J. Mater. Res.},
+  Pages = {56-63},
+  Title = {Excitons in scintillator materials: Optical properties and electron-energy loss spectra of NaI, LaBr$_3$, BaI$_2$, and SrI$_2$},
+  Volume = {32},
+  Year = {2017},
+  url = {http://dx.doi.org/10.1557/jmr.2016.395}
+}
+
+@article{Iliasova2022,
+  author = {{Iliasova}, M. and {Shevelev}, A. and {Khilkevich}, E. and {Kazakov}, Ye. and {Kiptily}, V. and {Nocente}, M. and {Giacomelli}, L. and {Craciunescu}, T. and {Stancar}, Z. and {Molin}, A. Dal and {Rigamonti}, D. and {Tardocchi}, M. and {Doinikov}, D. and {Gorini}, G. and {Naidenov}, V. and {Polunovsky}, I. and {Gin}, D. and {JET Contributors}},
+  title = "{Gamma-ray measurements in D$^{3}$ He fusion plasma experiments on JET}",
+  journal = {Nuclear Instruments and Methods in Physics Research A},
+  keywords = {Gamma-ray spectrometry, Fusion reaction, Fusion rate, Alpha-particles, Tokamak plasma},
+  year = 2022,
+  month = 5,
+  volume = {1031},
+  eid = {166586},
+  pages = {166586},
+  doi = {10.1016/j.nima.2022.166586},
+  url = {https://ui.adsabs.harvard.edu/abs/2022NIMPA103166586I},
+}
+
+@article{Tardocchi2011,
+  title = {Spectral Broadening of Characteristic $\ensuremath{\gamma}$-Ray Emission Peaks from $^{12}\mathbf{C}(^{3}\mathrm{He},p\ensuremath{\gamma})^{14}\mathbf{N}$ Reactions in Fusion Plasmas},
+  author = {Tardocchi, M. and Nocente, M. and Proverbio, I. and Kiptily, V. G. and Blanchard, P. and Conroy, S. and Fontanesi, M. and Grosso, G. and Kneupner, K. and Lerche, E. and Murari, A. and Perelli Cippo, E. and Pietropaolo, A. and Syme, B. and Van Eester, D. and Gorini, G.},
+  journal = {Phys. Rev. Lett.},
+  volume = {107},
+  issue = {20},
+  pages = {205002},
+  numpages = {4},
+  year = {2011},
+  month = {11},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.107.205002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.107.205002}
+}
+
+@article{Nocente2021,
+  author = {Nocente,M.  and Craciunescu,T.  and Gorini,G.  and Kiptily,V.  and Tardocchi,M.  and Braic,V.  and Curuia,M.  and Dal Molin,A.  and Figueiredo,J.  and Giacomelli,L.  and Iliasova,M.  and Kazakov,Y.  and Khilkevitch,E.  and Marcer,G.  and Panontin,E.  and Rigamonti,D.  and Salewski,M.  and Shevelev,A.  and Soare,S.  and Zoita,V.  and Zychor,I. },
+  title = {A new tangential gamma-ray spectrometer for fast ion measurements in deuterium and deuterium–tritium plasmas of the Joint European Torus},
+  journal = {Review of Scientific Instruments},
+  volume = {92},
+  number = {4},
+  pages = {043537},
+  year = {2021},
+  doi = {10.1063/5.0043806},
+  URL = { https://doi.org/10.1063/5.0043806},
+  eprint = { https://doi.org/10.1063/5.0043806}
+}
+
+@article{Curuia2017,
+  title = {Upgrade of the tangential gamma-ray spectrometer beam-line for JET DT experiments},
+  journal = {Fusion Engineering and Design},
+  volume = {123},
+  pages = {749-753},
+  year = {2017},
+  note = {Proceedings of the 29th Symposium on Fusion Technology (SOFT-29) Prague, Czech Republic, September 5-9, 2016},
+  issn = {0920-3796},
+  doi = {https://doi.org/10.1016/j.fusengdes.2017.05.064},
+  url = {https://www.sciencedirect.com/science/article/pii/S0920379617306087},
+  author = {Marian Curuia and Teddy Craciunescu and Sorin Soare and Vasile Zoita and Viorel Braic and David Croft and Ana Fernandes and Joao Figueiredo and Victor Goloborod’ko and Giuseppe Gorini and Sverker Griph and Vasily Kiptily and Igor Lengar and Slavomir Mianowski and Jonathan Naish and Richard Naish and Massimo Nocente and Rita Costa Pereira and Valeria Riccardo and Klaus Schoepf and Bruno Santos and Marco Tardocchi and Victor Yavorskij and Izabella Zychor},
+  keywords = {Tokamak, Diagnostics, Gamma-rays, Gamma-ray spectrometer, Neutron attenuators},
+}
+
+@article{Murari2008,
+  title = {Measuring the radiation field and radiation hard detectors at JET: Recent developments},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {593},
+  number = {3},
+  pages = {492-504},
+  year = {2008},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/j.nima.2008.05.058},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168900208007729},
+  author = {A. Murari and T. Edlington and M. Angelone and L. Bertalot and I. Bolshakova and G. Bonheure and J. Brzozowski and V. Coccorese and R. Holyaka and V. Kiptily and I. Lengar and P. Morgan and M. Pillon and S. Popovichev and P. Prior and R. Prokopowicz and A. Quercia and M. Rubel and M. Santala and A. Shevelev and B. Syme and G. Vagliasindi and R. Villari and V.L. Zoita},
+  keywords = {Radiation field, Radiation hard detectors},
+}
+
+@article{Pereira2011,
+  author = {Pereira, Rita C. and Fernandes, Ana M. and Neto, André and Sousa, Jorge and Varandas, Carlos A.F. and Cardoso, João and Correia, Carlos M.B.A. and Tardocchi, Marco and Nocente, Massimo and Gorini, Giuseppe and Kiptily, Vasily and Syme, Brian and Jennison, Mike},
+  title = {Pulse analysis for gamma-ray diagnostics ATCA sub-systems of JET tokamak},
+  year = {2011},
+  journal = {IEEE Transactions on Nuclear Science},
+  volume = {58},
+  number = {4 PART 1},
+  pages = {1531 – 1537},
+  doi = {10.1109/TNS.2011.2159391},
+  url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84860408464&doi=10.1109%2fTNS.2011.2159391&partnerID=40&md5=7601b08d4969918aa6d3a8653ef34545},
+}
+
+@article{Rigamonti2018,
+  author = {Rigamonti,D.  and Broslawski,A.  and Fernandes,A.  and Figueiredo,J.  and Giacomelli,L.  and Gorini,G.  and Gosk,M.  and Kaveney,G.  and Kiptily,V.  and Korolczuk,S.  and Murari,A.  and Nocente,M.  and Pereira,R. C.  and Popovichev,S.  and Santos,B.  and Urban,A.  and Zychor,I.  and Tardocchi,M. },
+  title = {The upgraded JET gamma-ray cameras based on high resolution/high count rate compact spectrometers},
+  journal = {Review of Scientific Instruments},
+  volume = {89},
+  number = {10},
+  pages = {10I116},
+  year = {2018},
+  doi = {10.1063/1.5038839},
+  URL = {https://doi.org/10.1063/1.5038839 },
+  eprint = { https://doi.org/10.1063/1.5038839}
+}
+
+@article{Fernandes2018,
+  title = {New FPGA based hardware implementation for JET gamma-ray camera upgrade},
+  journal = {Fusion Engineering and Design},
+  volume = {128},
+  pages = {188-192},
+  year = {2018},
+  issn = {0920-3796},
+  doi = {https://doi.org/10.1016/j.fusengdes.2018.02.038},
+  url = {https://www.sciencedirect.com/science/article/pii/S092037961830139X},
+  author = {A. Fernandes and R.C. Pereira and B. Santos and J. Bielecki and G. Boltruczyk and A. Broslawski and P.F. Carvalho and R. Dias and J. Figueiredo and L. Giacomelli and M. Gosk and V. Kiptily and S. Korolczuk and A. Murari and M. Nocente and D. Rigamonti and J. Sousa and M. Tardocchi and A. Urban and I. Zychor and C.M.B.A. Correia and B. Gonçalves}
+}
+
+@article{Tardocchi2008,
+  author = {Tardocchi,M.  and Proverbio,L. I.  and Gorini,G.  and Grosso,G.  and Locatelli,M.  and Chugonov,I. N.  and Gin,D. B.  and Shevelev,A. E.  and Murari,A.  and Kiptily,V. G.  and Syme,B.  and Fernandes,A. M.  and Pereira,R. C.  and Sousa,J. },
+  title = {Gamma ray spectroscopy at high energy and high time resolution at JET},
+  journal = {Review of Scientific Instruments},
+  volume = {79},
+  number = {10},
+  pages = {10E524},
+  year = {2008},
+  doi = {10.1063/1.2964205},
+  url = {https://doi.org/10.1063/1.2964205},
+  eprint = {https://doi.org/10.1063/1.2964205}
+}
+
+@unpublished{Shevelev2013a,
+  url = {https://scipub.euro-fusion.org/wp-content/uploads/2014/11/EFDP12041.pdf},
+  year = {2013},
+  author = {A.E. Shevelev and E.M. Khilkevitch and V.G. Kiptily and I.N. Chugunov and D.B. Gin and D.N. Doinikov and V.O. Naidenov and A.E. Litvinov and I.A. Polunovskii and},
+  title = {Reconstruction of distribution functions of fast ions and runaway electrons in fusion plasmas using gamma-ray spectrometry with applications to {ITER} (preprint, EFDA–JET–PR(12)41)}
+}
+
+@inproceedings{Plyusnin2015,
+  title={Parameters and stability of runaway electron dominating discharge in JET with ITER-like wall},
+  author={Plyusnin, VV and Kiptily, VG and Brix, M and Gerasimov, S and Matthews, GF and Shevelev, AE and Khilkevitch, EM},
+  booktitle={42nd European Physical Society Conference on Plasma Physics, EPS 2015},
+  year={2015}
+}
+
+@article{Granetz2014,
+  author = {Granetz,R. S.  and Esposito,B.  and Kim,J. H.  and Koslowski,R.  and Lehnen,M.  and Martin-Solis,J. R.  and Paz-Soldan,C.  and Rhee,T.  and Wesley,J. C.  and Zeng,L. },
+  title = {An ITPA joint experiment to study runaway electron generation and suppression},
+  journal = {Physics of Plasmas},
+  volume = {21},
+  number = {7},
+  pages = {072506},
+  year = {2014},
+  doi = {10.1063/1.4886802},
+  URL = {https://doi.org/10.1063/1.4886802},
+  eprint = {https://doi.org/10.1063/1.4886802}
+}
+
 
 
 
